<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WanAndroid</string>
    <!--主界面底部导航栏-->
    <string name="navigation_article">article</string>
    <string name="navigation_music">music</string>
    <string name="navigation_video">video</string>
    <string name="navigation_pastime">pastime</string>
    <string name="navigation_me">me</string>

    <!--DrawerToggle-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!--文章列表-->
    <string name="article_author">author</string>
    <string name="article_tag">tag</string>
    <string name="article_time">time</string>

    <!--视频顶部导航栏-->
    <string name="video_find">find</string>
    <string name="video_recommend">recommend</string>
    <string name="video_daily">daily</string>
</resources>
